# flashback-termux

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  config.example.yaml  flashback-pc-to-termux-migration-plan.txt  flashback-test.sh  gitignore-python-example.txt  plan-migration-example-python-code.txt  pyproject.toml  remove-flashback-cache.sh  structure.txt  termux-flashback-migration-plan.txt  todo.txt
docs/: LAZY_IMPORT_PLAN.md  LOGGING_PLAN.md
examples/: active_display_app_extraction_result.txt  display_dump_tasks.txt  display_dump_tasks_chrome.txt  dumpsys_displays.txt  example-screenshot.sh  example-window-title.sh  example_get_screen_lock_state.txt  extract_active_app_on_main_display.py  extract_app_name.sh  get_all_running_apps_in_all_displays.py
examples/image-embedding-fallback/: README.md  requirements.txt  server.py
flashback/: __init__.py  __main__.py
flashback/api/: __init__.py
flashback/api/routes/: __init__.py  config.py  screenshots.py
flashback/core/: config.py  daemon.py  database.py  logging_config.py  models.py  paths.py  screen_lock.py
flashback/search/: __init__.py  bm25.py  bm25_manager.py  embedding.py  tokenizer.py
flashback/web/templates/: detail.html  index.html  timeline.html
flashback/workers/: __init__.py  ocr.py  screenshot.py  window_title.py
references/bm25_update/: bm25.py  bm25_manager.py
termux-screenshot-workers-primitives/: example_basic_functions.py
